# jsPsych-Axum-Askama

./: .gitignore  LICENSE  Makefile  README.md  exp.json
client/: bun.lockb  package.json  tailwind.config.js
client/src/: index.ts
server/: Cargo.toml
server/src/: main.rs
server/static/css/: style.css
server/static/js/: index.js
server/templates/: index.html
