[package]
name = "jsPsych-axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["json", "multipart"] }
tokio = { version = "1.40.0", features = ["full", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
askama = "0.12.1"
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
